# openadr-rs

./: .dockerignore  .env  .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  deny.toml  docker-compose.yml  event.json  vtn.Dockerfile
.github/: dependabot.yml
.github/workflows/: checks.yml
.sqlx/: query-01762310c8ebdc24c708b2e4c9ed5fc5b88df329a17d5c6401d7b426ff8ed65a.json  query-017d677fa8c669e19f35eb7aafeedd9c637e9d4a4050a006cf6833ed880da967.json  query-01a1621412727d4e11947b6b1cfccd235c01fd53f52db753c7d3f145c4dd37f4.json  query-039e4191b68b652ab7c39dd8c5fc8ae53d6f7268189d5a29791b0933843b7fd9.json  query-08463f596e5d3deac8d5e8a29847fd5690ca76d47a2fccd9df3bd79aa4e9e1ab.json  query-0dc32444332bd9de7ac55c82cfb4de8f46173d901d58f612b1c6d0367cf3a153.json  query-13c3c1b488e0e58fef68df99fed2baff4728ff60f5857f48b20fbfccd9208ec4.json  query-17e4c5c2d187ec2be52b6d30c2ce617eba367c9380148582350d4a488c779f09.json  query-1ac68dc9329acb4c0f0c60cf27cfc0778132ae4f00bb4ee8a45e3c871cddafc3.json  query-1bdd2974acddd89b65e87a7ea39cd1e0bedc713e772b644dc275643a5bef8f8a.json  query-1ca605a616bba3f45ff50f7409571e5f0254a8af06b60897d278144a3400c49b.json  query-1e39551a92a9cbf741d12826234e7c90ebcd3a07aca5b08e301573591659d8f1.json  query-1e4dd74f603ad34fe7a3dd7bbc90fd506264502e76632dfd7c156708e4f2ded6.json  query-1fc364cc4625858bdb8ea159a3bea7fc6a30306e0e903bcbcb3499e7d4daefc0.json  query-1fcd2577289bb66aadfc016104e975a4e1fca4ac3698322c20c0b398144e274f.json  query-2374a56a452904b3772aa477d22da4c729207b69c2961c7a1920e45b397e843c.json  query-291de23f446a49549cbb427de34288bbb5d72909cdc05f10155a24b285dd8903.json  query-348aab83a718675aba2850418fe15960712c575ba20d6ede6841714386d9064e.json  query-3c334b966df8d36893ccf7f4ec77f01190eddf555738989cba53276e4e0cc0a6.json  query-3c89d5a7b353321d84c8e2177f83192e6f338d89cf9be41c51a339eb42b3a474.json  query-41f9ea6afa802d4f0fe4653bfc77d203f78967b81a617bcbad6e5a4acd3e6179.json  query-443f908e67a420dab5adb4ce6cf30b94e24b7388414df2cf77645b0e69805ad4.json  query-4692bd4fe201d23dd6c58c5d9fad0be1299c5fd7fea66db0fc027699a281c4be.json  query-46b10ab9db5bbb54e55872b2a04b03ebad35f12327f3950984e1154b31b11514.json  query-4b23b4975ecdedbadaca1d07d0645d30c18f4cd62a565cc44e7511cc34008474.json  query-4b2ef0b91c7a5653deb318e196f8c06dfe060616bcafa5ddc38468ed964e8abd.json  query-4bbc9508c472b40fcb347e07fc87111aa20ad67c89817380049ec3c905599fdb.json  query-4ccc3142896718d0032b9da549cb1186846f42d49bc190f07ca94b6a5e558602.json  query-4feeb8a9353ec05413b798b7ba9ece137afea8c0f867618e9faeabdb0c5ddb55.json  query-528ef377a6005365ec7c8e8a8c324d47b3a4d324e74cac449b48a3f9f612afef.json  query-5e7605ed200eb221be758f0b5d82d6dbfe984f88295d64a207d4a1be83730d2f.json  query-619995c7ecaeac946891546b832cc9f690b0daf08ba3540faa18809276cd6236.json  query-61a3a672b60c14241fe120eaadd3ad42176388569a4f942bcd0b305fdc6dd332.json  query-66786d85365eced3227abb35a90da1c1142601d942fd691e7fca8d02e88f70b2.json  query-6a334f6d28df0d4b8677e35c62d4a4098c1fece8721f35e03b544f1e5ef05afa.json  query-6b352614cd8312ec08e45499f8c1c5d0765cc96cafeefa6ff5fe5bd1967a2d23.json  query-6caf8fb782584a1dfa04f8f27c144272f5ac2c700b581ac1b75956c380e63d72.json  query-781d91cddc921ec0e247278c8aff9c4008b49e244e1c0fc2acc8c6b695532bae.json  query-7844ffa81af9be444f088c66ba961a23cd37bae62eef2ad9cb70515fb1bf51d0.json  query-7c9a8981055380d8f02f608d435699aa9346c8cea7ecea9088ec5dd1539bc70c.json  (+52 more)
everest/: Cargo.toml  build.rs
everest/src/: main.rs
fixtures/: business.sql  events.sql  openadr_testsuite_user.sql  programs.sql  reports.sql  resources.sql  users.sql  ven.sql  vens-programs.sql  vens.sql
migrations/: 20240723083125_initial_scheme.sql  20240826084440_initial_scheme.sql
openadr-client/: Cargo.toml
openadr-client/src/: error.rs  event.rs  lib.rs  program.rs  report.rs  target.rs  timeline.rs
openadr-client/tests/: basic-read.rs  event.rs  program.rs
openadr-client/tests/common/: mod.rs
openadr-vtn/: Cargo.toml
openadr-vtn/migrations/: 20240826084440_initial_scheme.sql
openadr-vtn/src/: error.rs  jwt.rs  lib.rs  main.rs  state.rs
openadr-vtn/src/api/: auth.rs  event.rs  mod.rs  program.rs  report.rs  resource.rs  user.rs  ven.rs
openadr-vtn/src/data_source/: mod.rs
openadr-vtn/src/data_source/memory/: event.rs  mod.rs  program.rs  report.rs  user.rs
openadr-vtn/src/data_source/postgres/: event.rs  mod.rs  program.rs  report.rs  resource.rs  user.rs  ven.rs
openadr-vtn/src/data_source/postgres/fixtures/: events.sql  programs.sql
openadr-wire/: Cargo.toml
openadr-wire/src/: event.rs  interval.rs  lib.rs  problem.rs  program.rs  report.rs  resource.rs  target.rs  values_map.rs  ven.rs
src/: client.rs  error.rs  lib.rs
src/cli/: main.rs
src/client/: event.rs  mod.rs  program.rs  report.rs  target.rs  timeline.rs
src/vtn/: error.rs  jwt.rs  main.rs  state.rs
src/vtn/api/: auth.rs  event.rs  mod.rs  program.rs  report.rs
src/vtn/data_source/: event.rs  mod.rs
src/vtn/data_source/fixtures/: events.sql
src/wire/: event.rs  interval.rs  mod.rs  oauth.rs  problem.rs  program.rs  report.rs  target.rs  values_map.rs
tests/: crud.rs  dyn-price.oadr.yaml  load-sched.oadr.yaml  schema.yaml  state-of-charge.oadr.yaml
