[package]
name = "openadr-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70" # MSRV
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tweedegolf/openadr-rs"
homepage = "https://github.com/tweedegolf/openadr-rs"
publish = true
description = "An OpenADR 3.0 VTN/VEN implementation"

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["http2", "charset", "rustls-tls-native-roots"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["query", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.61"
validator = {version =  "0.18.1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
once_cell = "1.19.0"
regex = "1.10.4"
chrono = "0.4.38"

[lib]
name = "openadr"

[[bin]]
name = "vtn"
path = "src/vtn/main.rs"

[[bin]]
name = "openadr"
path = "src/cli/main.rs"
