[package]
name = "openadr-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76" # MSRV
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tweedegolf/openadr-rs"
homepage = "https://github.com/tweedegolf/openadr-rs"
publish = true
description = "An OpenADR 3.0 VTN/VEN implementation"

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["http2", "charset", "rustls-tls-native-roots", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["query"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.61"
validator = {version =  "0.18.1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
regex = "1.10.4"
chrono = "0.4.38"
url = "2.5.0"
tower-http = { version = "0.5.2" , features = ["trace"]}
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
rangemap = "1.5.1"

[dev-dependencies]
quickcheck = "1.0.3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1.0"
mime = "0.3"
tokio = { version = "1.37.0", features = ["full", "test-util"] }

[lib]
name = "openadr"

[[bin]]
name = "vtn"
path = "src/vtn/main.rs"

[[bin]]
name = "openadr"
path = "src/cli/main.rs"
