[package]
name = "openadr-everest"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
everestrs = { git = "https://github.com/everest/everest-framework.git", rev = "3e767e2a5652d3acb97d01fc88aae2f04f3f5282" }

[build-dependencies]
everestrs-build = { git = "https://github.com/everest/everest-framework.git", rev = "3e767e2a5652d3acb97d01fc88aae2f04f3f5282" }