[package]
name = "openadr-client"
description = "openadr client"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
openadr-wire.workspace = true

serde.workspace = true
serde_json.workspace = true

reqwest.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
http-body-util.workspace = true
tower.workspace = true

url.workspace = true
chrono.workspace = true
rangemap.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
openadr-vtn = { path = "../openadr-vtn", features = ["postgres"] }
mime.workspace = true
sqlx.workspace = true